force-app/main/default/objects/OrgSync_Patient_Staging__c/OrgSync_Patient_Staging__c.object-meta.xml
<CustomObject>
    <description>This object is designed to store patient stage record coming from classic org.</description>
    <label>Patient Stage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>