force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Authorized_Callers__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Authorized_Callers__c</fullName>
    <description>This field is designed to store all active legal guardian and authorized caller&apos;s first name and last name comma separated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Callers</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>