force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Billing_Address__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>For storing Billing Address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Address</label>
    <type>Address</type>
</CustomField>