force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Current_Therapy__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_Therapy__c</fullName>
    <description>Defines the therapy type the patient is currently undergoing.</description>
    <label>Current Therapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insulin Pump</fullName>
            </value>
            <value>
                <fullName>1-2 Injections per day</fullName>
            </value>
            <value>
                <fullName>3+ Injections per day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>