force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_CustomerId__c</fullName>
    <description>This field is designed to store unique customer Id generated at classic org side.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>CustomerId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>