force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Email_1__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Email_1__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Email 1</label>
    <type>Email</type>
</CustomField>