force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_ERP_Identifier__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ERP_Identifier__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ERP Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>