force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Fax__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Fax__c</fullName>
    <description>This field is designed to store fax of patient corresponding to classic Fax id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>