force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Guardian_1_Email__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Guardian_1_Email__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Guardian 1 Email</label>
    <type>Email</type>
</CustomField>