force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Guardian_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Guardian_1_First_Name__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Used in GSK integration.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Primary parent/guardian&apos;s first name; used if Patient is a minor.</inlineHelpText>
    <label>Guardian 1 First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>