force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Guardian_1_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Guardian_1_Home_Phone__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Used in GSK integration.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Primary parent/guardian&apos;s home phone number.</inlineHelpText>
    <label>Guardian 1 Home Phone</label>
    <type>Phone</type>
</CustomField>