force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Guardian_1_Name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Guardian_1_Name__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Parent/Guardian 2 Last Name, First Name ( activated by workflow - PNT: Field Update - Parent/Guardian 2 Name)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Primary parent/guardian&apos;s full name, formatted as &quot;Last Name&quot;, &quot;First Name&quot;, and populated automatically with the values from those fields.</inlineHelpText>
    <label>Guardian 1 Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>