force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Guardian_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Guardian_2_First_Name__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Used in GSK integration.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Secondary parent/guardian&apos;s first name.</inlineHelpText>
    <label>Guardian 2 First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>