force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Guardian_2_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Guardian_2_Work_Phone__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Parent/Guardian 2 Work Phone</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Secondary parent/guardian&apos;s work phone number</inlineHelpText>
    <label>Guardian 2 Work Phone</label>
    <type>Phone</type>
</CustomField>