force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Insurance_Type__c</fullName>
    <description>Specifies the insurance coverage type for the patient.</description>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Other Government Plan</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Cash or No Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>