force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_LastName__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_LastName__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>For storing the last name of the patient</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>