force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Mobile_Phone__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>