force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_PersonGenderIdentity__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PersonGenderIdentity__c</fullName>
    <description>Used in GSK integration.</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>