force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Phone__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>This field is designed to hold value of Phone__c corresponding to classic org</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>