force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Practice__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is designed to hold practice Id to which patient is associated</description>
    <label>Practice</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must Select Practice Record Type Only</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Stages</relationshipLabel>
    <relationshipName>Patient_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>