force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Preferred_Language__c</fullName>
    <description>This field is designed to store preferred language of patient</description>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>