force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Provider__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to store the related Provider Id.</description>
    <label>Provider Stage</label>
    <referenceTo>OrgSync_Physician_Staging__c</referenceTo>
    <relationshipLabel>Patient Stages</relationshipLabel>
    <relationshipName>Patient_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>