force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Sensor_Continuous_GlucoseMonitor__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Sensor_Continuous_GlucoseMonitor__c</fullName>
    <description>Records the continuous glucose monitoring device used by the patient.</description>
    <label>Sensor / CGM(Continuous Glucose Monitor)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dexcom G6</fullName>
            </value>
            <value>
                <fullName>Dexcom G7</fullName>
            </value>
            <value>
                <fullName>Freestyle Libre 2</fullName>
            </value>
            <value>
                <fullName>Freestyle Libre 2 Plus</fullName>
            </value>
            <value>
                <fullName>Freestyle Libre 3</fullName>
            </value>
            <value>
                <fullName>Other CGM</fullName>
            </value>
            <value>
                <fullName>Not Currently Using a Sensor/CGM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>