force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Shipping_Address__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>For storing mailing address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>