force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_ShippingStateCode__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ShippingStateCode__c</fullName>
    <description>This field is created to resolve issue of CountryCode_StateCode in cdc</description>
    <formula>TEXT(OrgSync_Shipping_Address__StateCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippingStateCode</label>
    <type>Text</type>
</CustomField>