force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_SMS_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_SMS_Mobile_Number__c</fullName>
    <description>This field is designed corresponding to SMS Mobile Number of classic org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Mobile Number</label>
    <type>Phone</type>
</CustomField>