force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/OrgSync_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Work_Phone__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>