force-app/main/default/objects/OrgSync_Patient_Staging__c/fields/XCDC_ParentReferences__c.field-meta.xml
<CustomField>
    <fullName>XCDC_ParentReferences__c</fullName>
    <description>Used to store the external ids of parents and would be used by XReferences field in trigger context


format: &apos;{&quot;AccountId&quot;:&quot;&apos;+Account.XCDC_ExternalID__c+&apos;&quot;}&apos;</description>
    <formula>&apos;{&quot;PracticeId&quot;:&quot;&apos;+OrgSync_Practice__r.XCDC_ExternalId__c+&apos;&quot;, &quot;ProviderId&quot;:&quot;&apos;+OrgSync_Provider__r.XCDC_ExternalId__c+&apos;&quot;}&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCDC_ParentReferences</label>
    <type>Text</type>
</CustomField>