force-app/main/default/objects/OrgSync_Patient_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>XCDC_ExternalId__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>XCDC_StateField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>